--- a/src/app/AdminPanel/layout/admin/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/AdminPanel/layout/admin/breadcrumbs/breadcrumbs.component.html
@@ -11,7 +11,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4">
+      <!-- <div class="col-lg-4">
         <div class="page-header-breadcrumb">
           <ul class="breadcrumb">
             <li class="breadcrumb-item">
@@ -25,7 +25,7 @@
             </li>
           </ul>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
