--- a/src/app/AdminPanel/pages/brand-master/brand-list/brand-list.component.html
+++ b/src/app/AdminPanel/pages/brand-master/brand-list/brand-list.component.html
@@ -1,22 +1,22 @@
 <!-- *********************************************** Insert-Update **********************************************  -->
 <div *ngIf="IsAddEdit">
-  <div><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div>
+
   <form >
     <div>
       <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Brand Name<span class="warningclass">*</span></label>
+        <label class="col-sm-2 col-form-label">Brand Name<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
         <div class="col-sm-4">
           <input class="form-control"  [ngClass] ="brandObj.Brand_Name == '' && errorMessage != '' ? 'alert-danger':''" type="text" [(ngModel)]="brandObj.Brand_Name" id="Brand_Name" [ngModelOptions]="{standalone: true}">
         </div>
 
-        <label class="col-sm-2 col-form-label">Brand Name (Danish)<span class="warningclass">*</span></label>
+        <label class="col-sm-2 col-form-label">Brand Name (Danish)<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
         <div class="col-sm-4">
           <input class="form-control" type="text" [ngClass] ="brandObj.Brand_NameD == '' && errorMessage != '' ? 'alert-danger':''" [(ngModel)]="brandObj.Brand_NameD" id="Brand_Name_D" [ngModelOptions]="{standalone: true}" >
         </div>
       </div>
 
       <div class="form-group row">
-        <!-- <label class="col-sm-2 col-form-label">Display Seq No<span class="warningclass">*</span></label>
+        <!-- <label class="col-sm-2 col-form-label">Display Seq No<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
         <div class="col-sm-4">
           <input class="form-control" type="number"  [ngClass] ="(brandObj.Display_Seq_No == 0 || brandObj.Display_Seq_No == null) && errorMessage != '' ? 'alert-danger':''"[(ngModel)]="brandObj.Display_Seq_No" id="Display_Seq_No" [ngModelOptions]="{standalone: true}" min="0">
         </div> -->
@@ -33,6 +33,7 @@
       </div>
     </div>
     <br />
+    <div><div class='text-danger f-12'><span>{{warningMessage}}</span></div></div>
     <hr />
     <div class="text-center">
       <div class="form-group align-center">
@@ -49,11 +50,11 @@
 <!-- *********************************************** Data List **********************************************  -->
 <div class="row">
   <div class="col-sm-12">
-      <app-card [title]="'brand Master'" [classHeader]="true" [blockClass]="'table-border-style'">
+      <app-card  [classHeader]="true" [blockClass]="'table-border-style'">
         <div class="table-responsive">
             <p>
               <!-- <a class="btn btn-success float-right" [routerLink]="['/add-edit-item']">Add New</a>   -->
-              <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a>
+              <!-- <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a> -->
             </p>
               <br/>
               <br/>
@@ -65,6 +66,7 @@
                         <i class="pi pi-search"></i>
                         <input class="p-l-30 form-control" pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Global Search" />
                     </span>
+                    <span><a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a></span>
                 </div>
               </ng-template>
               <br/>
@@ -119,7 +121,7 @@
                   <td>
                     <div *ngIf="!item.editable">
                       <a class="ti-pencil-alt edit" (click)="editBrandmaster(item)"></a>
-                      &nbsp;<a class=" ti-trash delete" (click)="deleteBrand(item.Brand_ID)"></a>
+                      &nbsp;<a class=" ti-trash delete" data-toggle="tooltip" data-placement="top" title="{{deleteTooltip}}" (click)="deleteBrand(item.Brand_ID)"></a>
                     </div>
                     <div *ngIf="item.editable">
                       <button class="btn btn-sm btn-success" (click)="editBrandmaster(item)">Update</button>
