--- a/src/app/AdminPanel/pages/category-master/add-edit-category/add-edit-category.component.html
+++ b/src/app/AdminPanel/pages/category-master/add-edit-category/add-edit-category.component.html
@@ -8,7 +8,7 @@
   <div>
 
     <div class="form-group row">
-      <label class="col-sm-2 col-form-label">Root Category<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">Root Category<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <ng-select [(ngModel)]="categoryObj.RCatg_ID"  placeholder="Select Root Category"  id="RCatg_ID"  [ngModelOptions]="{standalone: true}">
           <ng-option *ngFor="let scat of CategoryList" [value]="scat.id"> {{scat.name}}</ng-option>
@@ -21,19 +21,19 @@
           </option>
         </select> -->
       </div>
-      <label class="col-sm-2 col-form-label">Category Name<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">Category Name<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <input class="form-control" type="text" [(ngModel)]="categoryObj.Catg_Name" id="Catg_Name" [ngModelOptions]="{standalone: true}">
       </div>
     </div>
 
     <div class="form-group row">
-      <label class="col-sm-2 col-form-label">Category Name (Danish)<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">Category Name (Danish)<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <input class="form-control" type="text" [(ngModel)]="categoryObj.Catg_Name_D" id="Catg_Name_D" [ngModelOptions]="{standalone: true}" >
       </div>
 
-      <label class="col-sm-2 col-form-label">Display Seq No<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">Display Seq No<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <input class="form-control" type="number" [(ngModel)]="categoryObj.Display_Seq_No" id="Display_Seq_No" [ngModelOptions]="{standalone: true}" min="0">
       </div>
