--- a/src/app/AdminPanel/pages/category-master/category-list/category-list.component.html
+++ b/src/app/AdminPanel/pages/category-master/category-list/category-list.component.html
@@ -1,18 +1,18 @@
 <!-- *********************************************** Insert-Update **********************************************  -->
 <div *ngIf="IsAddEdit">
-  <div><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div>
+
   <form >
     <div>
       <div class="form-group row">
 
-        <label class="col-sm-2 col-form-label">Root Category<span class="warningclass">*</span></label>
+        <label class="col-sm-2 col-form-label">Root Category<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
         <div class="col-sm-4">
           <ng-select [ngClass] ="(categoryObj.RCatg_ID == 0 || categoryObj.RCatg_ID == null)  && errorMessage != '' ? 'border border-danger':''"  [(ngModel)]="categoryObj.RCatg_ID"  placeholder="Select Root Category"  id="RCatg_ID"  [ngModelOptions]="{standalone: true}">
             <ng-option *ngFor="let scat of CategoryList" [value]="scat.id"> {{scat.name}}</ng-option>
           </ng-select>
         </div>
 
-        <label class="col-sm-2 col-form-label">Department<span class="warningclass">*</span></label>
+        <label class="col-sm-2 col-form-label">Department<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
         <div class="col-sm-4">
           <ng-select [ngClass] ="(categoryObj.SelectedDepartment == 0 || categoryObj.SelectedDepartment == null)  && errorMessage != '' ? 'border border-danger':''"
                 [multiple]="true"
@@ -28,19 +28,19 @@
       </div>
 
       <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Category Name<span class="warningclass">*</span></label>
+        <label class="col-sm-2 col-form-label">Category Name<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
         <div class="col-sm-4">
           <input class="form-control"  [ngClass] ="categoryObj.Catg_Name == '' && errorMessage != '' ? 'alert-danger':''" type="text" [(ngModel)]="categoryObj.Catg_Name" id="Catg_Name" [ngModelOptions]="{standalone: true}">
         </div>
 
-        <label class="col-sm-2 col-form-label">Category Name (Danish)<span class="warningclass">*</span></label>
+        <label class="col-sm-2 col-form-label">Category Name (Danish)<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
         <div class="col-sm-4">
           <input class="form-control" type="text" [ngClass] ="categoryObj.Catg_Name_D == '' && errorMessage != '' ? 'alert-danger':''" [(ngModel)]="categoryObj.Catg_Name_D" id="Catg_Name_D" [ngModelOptions]="{standalone: true}" >
         </div>
       </div>
 
       <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Display Seq No<span class="warningclass">*</span></label>
+        <label class="col-sm-2 col-form-label">Display Seq No<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
         <div class="col-sm-4">
           <input class="form-control" type="number"  [ngClass] ="(categoryObj.Display_Seq_No == 0 || categoryObj.Display_Seq_No == null) && errorMessage != '' ? 'alert-danger':''"[(ngModel)]="categoryObj.Display_Seq_No" id="Display_Seq_No" [ngModelOptions]="{standalone: true}" min="0">
         </div>
@@ -57,6 +57,7 @@
       </div>
     </div>
     <br />
+    <div><div class='text-danger f-12'><span>{{warningMessage}}</span></div></div>
     <hr />
     <div class="text-center">
       <div class="form-group align-center">
@@ -73,11 +74,11 @@
 <!-- *********************************************** Data List **********************************************  -->
 <div class="row">
   <div class="col-sm-12">
-      <app-card [title]="'Category Master'" [classHeader]="true" [blockClass]="'table-border-style'">
+      <app-card  [classHeader]="true" [blockClass]="'table-border-style'">
         <div class="table-responsive">
             <p>
               <!-- <a class="btn btn-success float-right" [routerLink]="['/add-edit-item']">Add New</a>   -->
-              <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a>
+              <!-- <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a> -->
             </p>
               <br/>
               <br/>
@@ -89,6 +90,7 @@
                         <i class="pi pi-search"></i>
                         <input class="p-l-30 form-control" pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Global Search" />
                     </span>
+                    <span><a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a></span>
                 </div>
               </ng-template>
               <br/>
@@ -100,7 +102,7 @@
                   <th pSortableColumn="RCatg_Name">Root Category Name <p-sortIcon field="RCatg_Name"></p-sortIcon></th>
                   <th pSortableColumn="Department">Department <p-sortIcon field="Department"></p-sortIcon></th>
                   <th pSortableColumn="StatusDesc">Status <p-sortIcon field="StatusDesc"></p-sortIcon></th>
-                  <th pSortableColumn="Deleted">IsDeleted <p-sortIcon field="Deleted"></p-sortIcon></th>
+                  <!-- <th pSortableColumn="Deleted">IsDeleted <p-sortIcon field="Deleted"></p-sortIcon></th> -->
                   <th >Action </th>
               </tr>
               <tr>
@@ -114,7 +116,7 @@
                   <th></th>
                   <th></th>
                   <th></th>
-                  <th></th>
+                  <!-- <th></th> -->
 
               </tr>
               </ng-template>
@@ -137,13 +139,15 @@
                   <td>
                         {{item.StatusDesc}}
                   </td>
-                  <td style = "width: 220px;">
+                  <!-- <td style = "width: 220px;">
                     {{item.Deleted}} <span *ngIf="item.Deleted =='Yes'"><button type="button" class="float-right btn btn-success text-white " (click) = "activateItem(item.Catg_ID)">Make Active</button> </span>
-                  </td>
+                  </td> -->
                   <td>
                           <a class="ti-pencil-alt edit" (click)="addEditOpen(item.Catg_ID)"></a>
-                          &nbsp;<a class=" ti-trash delete" (click)="deleteItem(item.Catg_ID)"></a>
-                             <!-- &nbsp;<a class=" ti-eye view" (click)="deleteItem(item.Item_ID)"></a> -->
+                          <!-- &nbsp;<a class=" ti-trash delete" data-toggle="tooltip" data-placement="top" title="{{deleteTooltip}}" (click)="deleteItem(item.Catg_ID)"></a> -->
+                          &nbsp;<a *ngIf="item.Deleted !='Yes'" class=" ti-trash delete" data-toggle="tooltip" data-placement="top" title="{{deleteTooltip}}" (click)="deleteItem(item.Catg_ID)"></a>
+                          <a *ngIf="item.Deleted =='Yes'" class=" ti-share delete" data-toggle="tooltip" data-placement="top" title="{{restoreTooltip}}" (click)="activateItem(item.Catg_ID)"></a>
+                          <!-- &nbsp;<a class=" ti-eye view" (click)="deleteItem(item.Item_ID)"></a> -->
                   </td>
               </tr>
               </ng-template>
