--- a/src/app/AdminPanel/pages/city-master/add-edit-city/add-edit-city.component.html
+++ b/src/app/AdminPanel/pages/city-master/add-edit-city/add-edit-city.component.html
@@ -8,25 +8,25 @@
   <div>
 
     <div class="form-group row">
-      <label class="col-sm-2 col-form-label">State<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">State<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <ng-select [(ngModel)]="cityObj.State_ID"  placeholder="Select Root City"  id="State_ID"  [ngModelOptions]="{standalone: true}">
           <ng-option *ngFor="let scat of StateList" [value]="scat.id"> {{scat.name}}</ng-option>
         </ng-select>
       </div>
-      <label class="col-sm-2 col-form-label">City Code<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">City Code<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <input class="form-control" type="text" [(ngModel)]="cityObj.City_Code" id="City_Code" [ngModelOptions]="{standalone: true}">
       </div>
     </div>
 
     <div class="form-group row">
-      <label class="col-sm-2 col-form-label">City Name<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">City Name<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <input class="form-control" type="text" [(ngModel)]="cityObj.City_Name" id="City_Name" [ngModelOptions]="{standalone: true}" >
       </div>
 
-      <label class="col-sm-2 col-form-label">Post Code<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">Post Code<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <input class="form-control" type="number" [(ngModel)]="cityObj.Post_Code" id="Post_Code" [ngModelOptions]="{standalone: true}" min="0">
       </div>
