--- a/src/app/AdminPanel/pages/country-master/country-list/country-list.component.html
+++ b/src/app/AdminPanel/pages/country-master/country-list/country-list.component.html
@@ -1,11 +1,11 @@
 
 <div class="row">
   <div class="col-sm-12">
-      <app-card [title]="'Country Master'" [classHeader]="true" [blockClass]="'table-border-style'">
+      <app-card  [classHeader]="true" [blockClass]="'table-border-style'">
         <div class="table-responsive">
             <p>
               <!-- <a class="btn btn-success float-right" [routerLink]="['/add-edit-item']">Add New</a>   -->
-              <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="openAddEditModal(0)"><span class="font-d"> Add New</span></a>
+              <!-- <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="openAddEditModal(0)"><span class="font-d"> Add New</span></a> -->
             </p>
               <br/>
               <br/>
@@ -17,6 +17,7 @@
                         <i class="pi pi-search"></i>
                         <input class="p-l-30 form-control" pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Global Search" />
                     </span>
+                    <span><a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="openAddEditModal(0)"><span class="font-d"> Add New</span></a></span>
                 </div>
               </ng-template>
               <br/>
@@ -54,7 +55,7 @@
                   </td>
                   <td>
                           <a class="ti-pencil-alt edit" (click)="openAddEditModal(item.Country_Id)"></a>
-                          &nbsp;<a class=" ti-trash delete" (click)="deleteItem(item.Country_Id)"></a>
+                          &nbsp;<a class=" ti-trash delete" data-toggle="tooltip" data-placement="top" title="{{deleteTooltip}}" (click)="deleteItem(item.Country_Id)"></a>
                              <!-- &nbsp;<a class=" ti-eye view" (click)="deleteItem(item.Item_ID)"></a> -->
                   </td>
               </tr>
@@ -83,21 +84,22 @@
         </div>
         <div class="modal-body">
 
-          <div><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div>
+          <!-- <div><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div> -->
           <form >
             <div>
                 <div class="form-group row">
-                  <label class="col-sm-2 col-form-label">Country Code<span class="warningclass">*</span></label>
+                  <label class="col-sm-2 col-form-label">Country Code<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
                   <div class="col-sm-4">
                     <input class="form-control" [ngClass] ="countryObj.Country_Code == '' && errorMessage != '' ? 'alert-danger':''" type="text" [(ngModel)]="countryObj.Country_Code" id="Country_Code" [ngModelOptions]="{standalone: true}">
                   </div>
-                  <label class="col-sm-2 col-form-label">Country Name<span class="warningclass">*</span></label>
+                  <label class="col-sm-2 col-form-label">Country Name<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
                   <div class="col-sm-4">
                     <input class="form-control" [ngClass] ="countryObj.Country_Name == '' && errorMessage != '' ? 'alert-danger':''" type="text"  [(ngModel)]="countryObj.Country_Name" id="Country_Name" [ngModelOptions]="{standalone: true}">
                   </div>
                 </div>
             </div>
             <br />
+            <div><div class='text-danger f-12'><span>{{warningMessage}}</span></div></div>
             <hr />
             <!-- <div class="text-center">
               <div class="form-group align-center">
