--- a/src/app/AdminPanel/pages/root-category-master/add-edit-root-category/add-edit-root-category.component.html
+++ b/src/app/AdminPanel/pages/root-category-master/add-edit-root-category/add-edit-root-category.component.html
@@ -8,7 +8,7 @@
   <div>
 
     <div class="form-group row">
-      <label class="col-sm-2 col-form-label">Root Name<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">Root Name<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <ng-select [(ngModel)]="rootCategoryObj.Root_Header_ID"  placeholder="Select Root"  id="Root_Header_ID"  [ngModelOptions]="{standalone: true}">
           <ng-option *ngFor="let scat of RootList" [value]="scat.id"> {{scat.name}}</ng-option>
@@ -21,19 +21,19 @@
           </option>
         </select> -->
       </div>
-      <label class="col-sm-2 col-form-label">Root Category Name<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">Root Category Name<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <input class="form-control" type="text" [(ngModel)]="rootCategoryObj.RCatg_Name" id="RCatg_Name" [ngModelOptions]="{standalone: true}">
       </div>
     </div>
 
     <div class="form-group row">
-      <label class="col-sm-2 col-form-label">Root Category Name (Danish)<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">Root Category Name (Danish)<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <input class="form-control" type="text" [(ngModel)]="rootCategoryObj.RCatg_Name_D" id="RCatg_Name_D" [ngModelOptions]="{standalone: true}" >
       </div>
 
-      <label class="col-sm-2 col-form-label">Display Seq No<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">Display Seq No<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <input class="form-control" type="number" [(ngModel)]="rootCategoryObj.Display_Seq_No" id="Display_Seq_No" [ngModelOptions]="{standalone: true}" min="0">
       </div>
