--- a/src/app/AdminPanel/pages/root-category-master/root-category-list/root-category-list.component.html
+++ b/src/app/AdminPanel/pages/root-category-master/root-category-list/root-category-list.component.html
@@ -1,11 +1,11 @@
 <!-- *********************************************** Insert-Update **********************************************  -->
 <div *ngIf="IsAddEdit">
-  <div><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div>
+  <!-- <div><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div> -->
   <form>
     <div>
 
       <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Root Name<span class="warningclass">*</span></label>
+        <label class="col-sm-2 col-form-label">Root Name <span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
         <div class="col-sm-4">
           <ng-select [ngClass] ="(rootCategoryObj.Root_Header_ID == 0 || rootCategoryObj.Root_Header_ID == null)  && errorMessage != '' ? 'border border-danger':''" [(ngModel)]="rootCategoryObj.Root_Header_ID" placeholder="Select Root" id="Root_Header_ID"
             [ngModelOptions]="{standalone: true}">
@@ -19,7 +19,7 @@
             </option>
           </select> -->
         </div>
-        <label class="col-sm-2 col-form-label">Root Category Name<span class="warningclass">*</span></label>
+        <label class="col-sm-2 col-form-label">Root Category Name<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
         <div class="col-sm-4">
           <input class="form-control" [ngClass] ="rootCategoryObj.RCatg_Name == '' && errorMessage != '' ? 'alert-danger':''" type="text" [(ngModel)]="rootCategoryObj.RCatg_Name" id="RCatg_Name"
             [ngModelOptions]="{standalone: true}">
@@ -27,13 +27,13 @@
       </div>
 
       <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Root Category Name (Danish)<span class="warningclass">*</span></label>
+        <label class="col-sm-2 col-form-label">Root Category Name (Danish)<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
         <div class="col-sm-4">
           <input class="form-control" [ngClass] ="rootCategoryObj.RCatg_Name_D == '' && errorMessage != '' ? 'alert-danger':''" type="text" [(ngModel)]="rootCategoryObj.RCatg_Name_D" id="RCatg_Name_D"
             [ngModelOptions]="{standalone: true}">
         </div>
 
-        <label class="col-sm-2 col-form-label">Display Seq No<span class="warningclass">*</span></label>
+        <label class="col-sm-2 col-form-label">Display Seq No<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
         <div class="col-sm-4">
           <input class="form-control" [ngClass] ="(rootCategoryObj.Display_Seq_No == 0 || rootCategoryObj.Display_Seq_No == null) && errorMessage != '' ? 'alert-danger':''" type="number" [(ngModel)]="rootCategoryObj.Display_Seq_No" id="Display_Seq_No"
             [ngModelOptions]="{standalone: true}" min="0">
@@ -53,6 +53,7 @@
       </div>
     </div>
     <br />
+    <div><div class='text-danger f-12'><span>{{warningMessage}}</span></div></div>
     <hr />
     <div class="text-center">
       <div class="form-group align-center">
@@ -68,15 +69,15 @@
 </div>
 
 <!-- *********************************************** Data List **********************************************  -->
-<div *ngIf="IsRowEdit"><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div>
+<div *ngIf="IsRowEdit"><div class='text-danger f-12'><span>{{warningMessage}}</span></div><br /></div>
 <div class="row">
   <div class="col-sm-12">
-    <app-card [title]="'Root Category Master'" [classHeader]="true" [blockClass]="'table-border-style'">
+    <app-card [classHeader]="true" [blockClass]="'table-border-style'">
       <div class="table-responsive">
         <p>
           <!-- <a class="btn btn-success float-right" [routerLink]="['/add-edit-item']">Add New</a>   -->
-          <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer"
-            (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a>
+          <!-- <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer"
+            (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a> -->
         </p>
         <br />
         <br />
@@ -94,6 +95,7 @@
                 <input class="p-l-30 form-control" pInputText type="text"
                   (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Global Search" />
               </span>
+              <span><a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a></span>
             </div>
           </ng-template>
           <br />
@@ -111,8 +113,8 @@
               </th>
               <th pSortableColumn="Display_Seq_No">Display Seq No<span class="warningclass" *ngIf="IsRowEdit">*</span> <p-sortIcon field="Display_Seq_No"></p-sortIcon>
               </th>
-              <th pSortableColumn="Deleted">IsDeleted <p-sortIcon field="Deleted"></p-sortIcon>
-              </th>
+              <!-- <th pSortableColumn="Deleted">IsDeleted <p-sortIcon field="Deleted"></p-sortIcon>
+              </th> -->
               <th>Action </th>
             </tr>
             <tr>
@@ -129,7 +131,7 @@
               <th></th>
               <th></th>
               <th></th>
-              <th></th>
+              <!-- <th></th> -->
 
             </tr>
           </ng-template>
@@ -171,15 +173,17 @@
                 <span *ngIf="!item.isEditable">{{item.Display_Seq_No}}</span>
                 <input type="text" [ngClass] ="(item.Display_Seq_No == '' || item.Display_Seq_No == '0') && errorMessage != '' ? 'alert-danger':''" id="Display_Seq_No"  class="form-control" [(ngModel)]="item.Display_Seq_No" *ngIf="item.isEditable"/>
               </td>
-              <td style="width: 220px;">
+              <!-- <td style="width: 220px;">
                 {{item.Deleted}} <span *ngIf="item.Deleted =='Yes'"><button type="button"
                     class="float-right btn btn-success text-white " (click)="activateItem(item.RCatg_ID)">Make
                     Active</button> </span>
-              </td>
+              </td> -->
               <td>
                 <div *ngIf="!item.isEditable">
                   <a class="ti-pencil-alt edit" (click)="openEditPage(item)"></a>
-                  &nbsp;<a class=" ti-trash delete" (click)="deleteItem(item.RCatg_ID)"></a>
+                  <!-- &nbsp;<a class=" ti-trash delete" data-toggle="tooltip" data-placement="top" title="{{deleteTooltip}}" (click)="deleteItem(item.RCatg_ID)"></a> -->
+                  &nbsp;<a *ngIf="item.Deleted !='Yes'" class=" ti-trash delete" data-toggle="tooltip" data-placement="top" title="{{deleteTooltip}}" (click)="deleteItem(item.RCatg_ID)"></a>
+                          <a *ngIf="item.Deleted =='Yes'" class=" ti-share delete" data-toggle="tooltip" data-placement="top" title="{{restoreTooltip}}" (click)="activateItem(item.RCatg_ID)"></a>
                 </div>
                 <div *ngIf="item.isEditable">
                   <button class="btn btn-sm btn-success" (click)="updateRootCategory(item)">Update</button>
