--- a/src/app/AdminPanel/pages/root-header-master/root-header-list/root-header-list.component.html
+++ b/src/app/AdminPanel/pages/root-header-master/root-header-list/root-header-list.component.html
@@ -1,22 +1,22 @@
 <div *ngIf="IsAddEdit">
-  <div><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div>
+
   <form>
     <div>
 
       <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Root Name<span class="warningclass">*</span></label>
+        <label class="col-sm-2 col-form-label">Root Name<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
         <div class="col-sm-4">
           <input class="form-control" [ngClass] ="rootHeaderObj.Root_Name == '' && errorMessage != '' ? 'alert-danger':''" type="text" [(ngModel)]="rootHeaderObj.Root_Name" id="Root_Name" [ngModelOptions]="{standalone: true}">
         </div>
 
-        <label class="col-sm-2 col-form-label">Root Name (Danish)<span class="warningclass">*</span></label>
+        <label class="col-sm-2 col-form-label">Root Name (Danish)<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
         <div class="col-sm-4">
           <input class="form-control" [ngClass] ="rootHeaderObj.Root_Name_D == '' && errorMessage != '' ? 'alert-danger':''" type="text" [(ngModel)]="rootHeaderObj.Root_Name_D" id="Root_Name_D" [ngModelOptions]="{standalone: true}" >
         </div>
       </div>
 
       <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Display Seq No<span class="warningclass">*</span></label>
+        <label class="col-sm-2 col-form-label">Display Seq No<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
         <div class="col-sm-4">
           <input class="form-control" [ngClass] ="(rootHeaderObj.Display_Seq_No == 0 || rootHeaderObj.Display_Seq_No == null) && errorMessage != '' ? 'alert-danger':''" type="number" [(ngModel)]="rootHeaderObj.Display_Seq_No" id="Display_Seq_No" [ngModelOptions]="{standalone: true}" min="0">
         </div>
@@ -32,6 +32,7 @@
       </div>
     </div>
     <br />
+    <div><div class='text-danger f-12'><span>{{warningMessage}}</span></div></div>
     <hr />
     <div class="text-center">
       <div class="form-group align-center">
@@ -45,27 +46,31 @@
 </div>
 
 <!-- ________________________List Data__________________________________ -->
-<div *ngIf="IsRowEdit"><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div>
+<div *ngIf="IsRowEdit"><div class='text-danger f-12'><span>{{warningMessage}}</span></div><br /></div>
 <div class="row">
   <div class="col-sm-12">
-      <app-card [title]="'Root Header Master'" [classHeader]="true" [blockClass]="'table-border-style'">
+      <!-- <app-card [title]="'Root Header Master'" [classHeader]="true" [blockClass]="'table-border-style'"> -->
+      <app-card [classHeader]="true" [blockClass]="'table-border-style'">
         <div class="table-responsive">
-            <p>
-              <!-- <a class="btn btn-success float-right" [routerLink]="['/add-edit-item']">Add New</a>   -->
+            <!-- <p>
               <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a>
-            </p>
-              <br/>
-              <br/>
+            </p> -->
+              <!-- <br/>
+              <br/> -->
 
-            <p-table class="" #dt [value]="rootHeaderMaster" [(selection)]="selectedRootHeaderMaster" dataKey="id" [autoLayout]="true" styleClass="p-datatable-d" [rowHover]="true" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]" [loading]="loading" [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [filterDelay]="0" [globalFilterFields]="['Root_Name']">
+              <p-table class="" #dt [value]="rootHeaderMaster" [(selection)]="selectedRootHeaderMaster" dataKey="id" [autoLayout]="true" styleClass="p-datatable-d" [rowHover]="true" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]" [loading]="loading" [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [filterDelay]="0" [globalFilterFields]="['Root_Name','Root_Name_D']">
 
               <ng-template pTemplate="caption">
                 <div class="table-header-p ">
-                    <span class="p-input-icon-left">
+                    <span class="p-input-icon-left width100">
                         <i class="pi pi-search"></i>
                         <input class="p-l-30 form-control" pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Global Search" />
                     </span>
+                    <span><a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a></span>
                 </div>
+                <!-- <div>
+                  <span><a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a></span>
+                </div> -->
               </ng-template>
               <br/>
               <br/>
@@ -75,7 +80,7 @@
                   <th pSortableColumn="Root_Name_D">Root Name (Danish)<span class="warningclass" *ngIf="IsRowEdit">*</span> <p-sortIcon field="Root_Name_D"></p-sortIcon></th>
                   <th pSortableColumn="StatusDesc">Status<span class="warningclass" *ngIf="IsRowEdit">*</span> <p-sortIcon field="Display_Seq_No"></p-sortIcon></th>
                   <th pSortableColumn="Display_Seq_No">Display Seq No <p-sortIcon field="Display_Seq_No"></p-sortIcon></th>
-                  <th pSortableColumn="Deleted">IsDeleted <p-sortIcon field="Deleted"></p-sortIcon></th>
+                  <!-- <th pSortableColumn="Deleted">IsDeleted <p-sortIcon field="Deleted"></p-sortIcon></th> -->
                   <th >Action </th>
               </tr>
               <tr>
@@ -86,7 +91,7 @@
                   <th></th>
                   <th></th>
                   <th></th>
-                  <th></th>
+                  <!-- <th></th> -->
                    <th></th>
 
               </tr>
@@ -114,7 +119,6 @@
                           {{st.name}}
                         </option>
                       </select>
-
                       <!-- <input class="form-control" type="text" [(ngModel)]="item.Status" value="{{item.StatusDesc}}"> -->
                     </div>
 
@@ -125,13 +129,14 @@
                     <input type="text" class="form-control" [ngClass] ="(item.Display_Seq_No == '' ||item.Display_Seq_No == '0')  && errorMessage != '' ? 'alert-danger':''"  [(ngModel)]="item.Display_Seq_No" *ngIf="item.isEditable"/>
                         <!-- {{item.Display_Seq_No}} -->
                   </td>
-                  <td style = "width: 230px;">
+                  <!-- <td style = "width: 230px;">
                     {{item.Deleted}} <span *ngIf="item.Deleted =='Yes'"><button type="button" class="float-right btn btn-success text-white " (click) = "activateItem(item.Root_Header_ID)">Make Active</button> </span>
-                  </td>
+                  </td> -->
                   <td>
                       <div *ngIf="!item.isEditable">
                         <a class="ti-pencil-alt edit" (click)="openEditPage(item)"></a>
-                        &nbsp;<a class=" ti-trash delete" (click)="deleteItem(item.Root_Header_ID)"></a>
+                        &nbsp;<a *ngIf="item.Deleted !='Yes'" class=" ti-trash delete" data-toggle="tooltip" data-placement="top" title="{{deleteTooltip}}" (click)="deleteItem(item.Root_Header_ID)"></a>
+                        <a *ngIf="item.Deleted =='Yes'" class=" ti-share delete" data-toggle="tooltip" data-placement="top" title="{{restoreTooltip}}" (click)="activateItem(item.Root_Header_ID)"></a>
                       </div>
                       <div *ngIf="item.isEditable">
                         <button class="btn btn-sm btn-success" (click)="updateRootHeader(item)">Update</button>
