--- a/src/app/AdminPanel/pages/route-master/add-edit-route/add-edit-route.component.html
+++ b/src/app/AdminPanel/pages/route-master/add-edit-route/add-edit-route.component.html
@@ -4,15 +4,15 @@
   <div>
 
     <div class="form-group row">
-      <!-- <label class="col-sm-2 col-form-label">Route Name<span class="warningclass">*</span></label> -->
+      <!-- <label class="col-sm-2 col-form-label">Route Name<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label> -->
       <!-- <div class="col-sm-4">
         <input class="form-control" type="text" [(ngModel)]="routeObj.Route_Name" id="Route_Name" [ngModelOptions]="{standalone: true}">
       </div> -->
-      <label class="col-sm-2 col-form-label">Route From<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">Route From<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <input class="form-control" type="text" [(ngModel)]="routeObj.Route_From" id="Route_From" [ngModelOptions]="{standalone: true}">
       </div>
-      <label class="col-sm-2 col-form-label">Route To<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">Route To<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <input class="form-control" type="text" [(ngModel)]="routeObj.Route_To" id="Route_To" [ngModelOptions]="{standalone: true}">
       </div>
