--- a/src/app/AdminPanel/pages/state-master/add-edit-state/add-edit-state.component.html
+++ b/src/app/AdminPanel/pages/state-master/add-edit-state/add-edit-state.component.html
@@ -8,19 +8,19 @@
   <div>
 
     <div class="form-group row">
-      <label class="col-sm-2 col-form-label">Country<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">Country<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <ng-select [(ngModel)]="stateObj.Country_ID"  placeholder="Select Country"  id="Country_ID"  [ngModelOptions]="{standalone: true}">
           <ng-option *ngFor="let scat of CountryList" [value]="scat.id"> {{scat.name}}</ng-option>
         </ng-select>
       </div>
-      <label class="col-sm-2 col-form-label">State Code<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">State Code<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <input class="form-control" type="text" [(ngModel)]="stateObj.State_Code" id="State_Code" [ngModelOptions]="{standalone: true}">
       </div>
     </div>
     <div class="form-group row">
-      <label class="col-sm-2 col-form-label">State Name<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">State Name<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <input class="form-control" type="text" [(ngModel)]="stateObj.State_Name" id="State_Name" [ngModelOptions]="{standalone: true}" >
       </div>
