--- a/src/app/AdminPanel/pages/state-master/state-list/state-list.component.html
+++ b/src/app/AdminPanel/pages/state-master/state-list/state-list.component.html
@@ -71,7 +71,7 @@
               <td><a class="btn btn-primary text-white" (click)="openCityModal(item.State_ID)">View | Add City</a></td>
               <td>
                 <a class="ti-pencil-alt edit" (click)="openEditPage(item.State_ID)"></a>
-                &nbsp;<a class=" ti-trash delete" (click)="deleteItem(item.State_ID)"></a>
+                &nbsp;<a class=" ti-trash delete" data-toggle="tooltip" data-placement="top" title="{{deleteTooltip}}" (click)="deleteItem(item.State_ID)"></a>
                 <!-- &nbsp;<a class=" ti-eye view" (click)="deleteItem(item.Item_ID)"></a> -->
               </td>
             </tr>
@@ -110,8 +110,8 @@
                 <div class="table-responsive">
                   <p>
                     <!-- <a class="btn btn-success float-right" [routerLink]="['/add-edit-item']">Add New</a>   -->
-                    <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer"
-                      (click)="addNewRow()"><span class="font-d"> Add New</span></a>
+                    <!-- <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer"
+                      (click)="addNewRow()"><span class="font-d"> Add New</span></a> -->
                   </p>
                   <br />
                   <br />
@@ -127,6 +127,7 @@
                           <input class="p-l-30 form-control" pInputText type="text"
                             (input)="dts.filterGlobal($event.target.value, 'contains')" placeholder="Global Search" />
                         </span>
+                        <span><a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addNewRow()"><span class="font-d"> Add New</span></a></span>
                       </div>
                     </ng-template>
                     <br />
@@ -174,7 +175,7 @@
                         <td>
                           <!-- <a class="ti-pencil-alt edit" (click)="openEditPage(item.City_ID,item.State_ID)"></a>
                           &nbsp; -->
-                          <a class=" ti-trash delete" (click)="deleteCityItem(item.City_ID,item.State_ID,rowIndex)"></a>
+                          <a class=" ti-trash delete" data-toggle="tooltip" data-placement="top" title="{{deleteTooltip}}" (click)="deleteCityItem(item.City_ID,item.State_ID,rowIndex)"></a>
 
                         </td>
                       </tr>
