--- a/src/app/AdminPanel/pages/street-master/add-edit-street/add-edit-street.component.html
+++ b/src/app/AdminPanel/pages/street-master/add-edit-street/add-edit-street.component.html
@@ -3,13 +3,13 @@
   <div>
 
     <div class="form-group row">
-      <label class="col-sm-2 col-form-label">City<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">City<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <ng-select [(ngModel)]="streetObj.City_ID"  placeholder="Select City"  id="City_ID"  [ngModelOptions]="{standalone: true}">
           <ng-option *ngFor="let scat of CityList" [value]="scat.id"> {{scat.name}}</ng-option>
         </ng-select>
       </div>
-      <label class="col-sm-2 col-form-label">Street Name<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">Street Name<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
       <div class="col-sm-4">
         <input class="form-control" type="text" [(ngModel)]="streetObj.Street_Name" id="Street_Name" [ngModelOptions]="{standalone: true}">
       </div>
