--- a/src/app/AdminPanel/pages/sub-category-master/sub-category-list/sub-category-list.component.html
+++ b/src/app/AdminPanel/pages/sub-category-master/sub-category-list/sub-category-list.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-sm-12">
-    <app-card [title]="'Sub Category Master'" [classHeader]="true" [blockClass]="'table-border-style'">
+    <app-card [classHeader]="true" [blockClass]="'table-border-style'">
       <div class="table-responsive">
         <p>
           <!-- <a class="btn btn-success float-right" [routerLink]="['/add-edit-item']">Add New</a>   -->
-          <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer"
-            (click)="openInsertPage()"><span class="font-d"> Add New</span></a>
+          <!-- <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer"
+            (click)="openInsertPage()"><span class="font-d"> Add New</span></a> -->
         </p>
         <br />
         <br />
@@ -22,6 +22,7 @@
                 <input class="p-l-30 form-control" pInputText type="text"
                   (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Global Search" />
               </span>
+              <span><a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="openInsertPage()"><span class="font-d"> Add New</span></a></span>
             </div>
           </ng-template>
           <br />
@@ -38,8 +39,8 @@
               <th pSortableColumn="DepartmentCodes">Department <p-sortIcon field="DepartmentCodes"></p-sortIcon>
               <th pSortableColumn="StatusDesc">Status <p-sortIcon field="StatusDesc"></p-sortIcon>
               </th>
-              <th pSortableColumn="Deleted">IsDeleted <p-sortIcon field="Deleted"></p-sortIcon>
-              </th>
+              <!-- <th pSortableColumn="Deleted">IsDeleted <p-sortIcon field="Deleted"></p-sortIcon>
+              </th> -->
               <th>Action </th>
             </tr>
             <tr>
@@ -58,7 +59,7 @@
               <th></th>
               <th></th>
               <th></th>
-              <th></th>
+              <!-- <th></th> -->
 
             </tr>
           </ng-template>
@@ -82,14 +83,16 @@
               <td>
                 {{item.StatusDesc}}
               </td>
-              <td style="width: 220px;">
+              <!-- <td style="width: 220px;">
                 {{item.Deleted}} <span *ngIf="item.Deleted =='Yes'"><button type="button"
                     class="float-right btn btn-success text-white " (click)="activateItem(item.Sub_Catg_ID)">Make
                     Active</button> </span>
-              </td>
+              </td> -->
               <td>
                 <a class="ti-pencil-alt edit" (click)="openEditPage(item.Sub_Catg_ID)"></a>
-                &nbsp;<a class=" ti-trash delete" (click)="deleteItem(item.Sub_Catg_ID)"></a>
+                <!-- &nbsp;<a class=" ti-trash delete" data-toggle="tooltip" data-placement="top" title="{{deleteTooltip}}" (click)="deleteItem(item.Sub_Catg_ID)"></a> -->
+                &nbsp;<a *ngIf="item.Deleted !='Yes'" class=" ti-trash delete" data-toggle="tooltip" data-placement="top" title="{{deleteTooltip}}" (click)="deleteItem(item.Sub_Catg_ID)"></a>
+                      <a *ngIf="item.Deleted =='Yes'" class=" ti-share delete" data-toggle="tooltip" data-placement="top" title="{{restoreTooltip}}" (click)="activateItem(item.Sub_Catg_ID)"></a>
                 <!-- &nbsp;<a class=" ti-eye view" (click)="deleteItem(item.Item_ID)"></a> -->
               </td>
             </tr>
