--- a/src/app/AdminPanel/pages/vehicle-route-master/vehicle-route-list/vehicle-route-list.component.html
+++ b/src/app/AdminPanel/pages/vehicle-route-master/vehicle-route-list/vehicle-route-list.component.html
@@ -1,18 +1,18 @@
 <!-- *********************************************** Insert-Update **********************************************  -->
 <div *ngIf="IsAddEdit">
-  <div><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div>
+  <!-- <div><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div> -->
   <form >
     <div>
       <div class="form-group row">
 
-        <label class="col-sm-2 col-form-label">Vehicle<span class="warningclass">*</span></label>
+        <label class="col-sm-2 col-form-label">Vehicle<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
         <div class="col-sm-4">
           <ng-select [ngClass] ="(vehicleRouteObj.Vehicle_Id == 0 || vehicleRouteObj.Vehicle_Id == null)  && errorMessage != '' ? 'border border-danger':''"  [(ngModel)]="vehicleRouteObj.Vehicle_Id"  placeholder="Select Vehicle"  id="Vehicle_Id"  [ngModelOptions]="{standalone: true}">
             <ng-option *ngFor="let scat of VehicleList" [value]="scat.id"> {{scat.name}}</ng-option>
           </ng-select>
         </div>
 
-        <label class="col-sm-2 col-form-label">Route<span class="warningclass">*</span></label>
+        <label class="col-sm-2 col-form-label">Route<span class="warningclass" data-toggle="tooltip" data-placement="top" title="{{required}}">*</span></label>
         <div class="col-sm-4">
           <ng-select [ngClass] ="(vehicleRouteObj.SelectedRoute == 0 || vehicleRouteObj.SelectedRoute == null)  && errorMessage != '' ? 'border border-danger':''"
                 [multiple]="true"
@@ -28,6 +28,7 @@
 
     </div>
     <br />
+    <div><div class='text-danger f-12'><span>{{warningMessage}}</span></div></div>
     <hr />
     <div class="text-center">
       <div class="form-group align-center">
@@ -42,14 +43,14 @@
 </div>
 
 <!-- *********************************************** Data List **********************************************  -->
-<div *ngIf="IsRowEdit"><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div>
+<div *ngIf="IsRowEdit"><div class='text-danger f-12'><span>{{warningMessage}}</span></div><br /></div>
 <div class="row">
   <div class="col-sm-12">
-      <app-card [title]="'Vehicle Route Mapping List'" [classHeader]="true" [blockClass]="'table-border-style'">
+      <app-card [classHeader]="true" [blockClass]="'table-border-style'">
         <div class="table-responsive">
             <p>
               <!-- <a class="btn btn-success float-right" [routerLink]="['/add-edit-item']">Add New</a>   -->
-              <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a>
+              <!-- <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a> -->
             </p>
               <br/>
               <br/>
@@ -61,6 +62,7 @@
                         <i class="pi pi-search"></i>
                         <input class="p-l-30 form-control" pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Global Search" />
                     </span>
+                    <span><a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a></span>
                 </div>
               </ng-template>
               <br/>
@@ -69,7 +71,7 @@
               <tr>
                   <th pSortableColumn="Vehicle_No">Vehicle<span class="warningclass" *ngIf="IsRowEdit">*</span> <p-sortIcon field="Vehicle_No"></p-sortIcon></th>
                   <th pSortableColumn="Route_Name">Route<span class="warningclass" *ngIf="IsRowEdit">*</span> <p-sortIcon field="Route_Name"></p-sortIcon></th>
-                  <th pSortableColumn="Deleted">IsDeleted <p-sortIcon field="Deleted"></p-sortIcon></th>
+                  <!-- <th pSortableColumn="Deleted">IsDeleted <p-sortIcon field="Deleted"></p-sortIcon></th> -->
                   <th >Action </th>
               </tr>
               <tr>
@@ -80,7 +82,7 @@
                       <input pInputText type="text" (input)="dt.filter($event.target.value, 'Route_Name', 'contains')" placeholder="Search by Route" class="form-control">
                   </th>
                   <th></th>
-                  <th></th>
+                  <!-- <th></th> -->
               </tr>
               </ng-template>
 
@@ -113,13 +115,15 @@
                       </ng-select>
                     </div>
                   </td>
-                  <td style = "width: 220px;">
+                  <!-- <td style = "width: 220px;">
                     {{item.Deleted}} <span *ngIf="item.Deleted =='Yes'"><button type="button" class="float-right btn btn-success text-white " (click) = "activateItem(item.Map_Id)">Make Active</button> </span>
-                  </td>
+                  </td> -->
                   <td>
                     <div *ngIf="!item.isEditable">
                       <a class="ti-pencil-alt edit" (click)="openEditPage(item)"></a>
-                      &nbsp;<a class=" ti-trash delete" (click)="deleteItem(item.Map_Id)"></a>
+                      <!-- &nbsp;<a class=" ti-trash delete" data-toggle="tooltip" data-placement="top" title="{{deleteTooltip}}" (click)="deleteItem(item.Map_Id)"></a> -->
+                      &nbsp;<a *ngIf="item.Deleted !='Yes'" class=" ti-trash delete" data-toggle="tooltip" data-placement="top" title="{{deleteTooltip}}" (click)="deleteItem(item.Map_Id)"></a>
+                                <a *ngIf="item.Deleted =='Yes'" class=" ti-share delete" data-toggle="tooltip" data-placement="top" title="{{restoreTooltip}}" (click)="activateItem(item.Map_Id)"></a>
                     </div>
                     <div *ngIf="item.isEditable">
                       <button class="btn btn-sm btn-success" (click)="updateVehicleRoute(item)">Update</button>
