--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+@import "~@ng-select/ng-select/themes/default.theme.css";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-// @import "~ng-pick-datetime/assets/style/picker.min.css";
-@import "~@ng-select/ng-select/themes/default.theme.css";
+@media only screen and (max-width: 450px) {
+  .float-right {
+    float: initial !important;
+    margin-top: 10px;
+    width: 100%;
+  }
+  .width100{
+    width:100%;
+  }
+};
+
 body {
   background-color: #f3f3f3;
   font-size: 0.875em;
@@ -16,6 +28,18 @@ body {
 }
 .captcha{
   float: left; letter-spacing: 5px;
+}
+.f-10{
+  font-size:10px;
+}
+.f-12{
+  font-size:12px;
+}
+.f-14{
+  font-size:14px;
+}
+.f-16{
+  font-size:16px;
 }
 * {
   &:focus {
